Adding menu buttons and some window style
Adding the menu buttons and some labels. These will be the part of the navigation. Disabling the ControlBox and changing FormBorderStyle to none. Adding rounded border with GraphicsPath and BorderRounded method.

--- a/Projector service app/Projector service app.csproj
+++ b/Projector service app/Projector service app.csproj
@@ -47,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
-    <Compile Include="c\BinaryDeserialize.cs" />
     <Compile Include="DataSerializer.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="Form1.cs">
@@ -70,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -83,6 +83,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\power.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\videocameracompact.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\profle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\volume.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
