--- a/Projector service app/Projector service app.csproj
+++ b/Projector service app/Projector service app.csproj
@@ -87,6 +87,12 @@
     <Compile Include="NewRecordForm.Designer.cs">
       <DependentUpon>NewRecordForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PriceAcceptance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PriceAcceptance.Designer.cs">
+      <DependentUpon>PriceAcceptance.cs</DependentUpon>
+    </Compile>
     <Compile Include="PricingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NewRecordForm.resx">
       <DependentUpon>NewRecordForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PriceAcceptance.resx">
+      <DependentUpon>PriceAcceptance.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PricingForm.resx">
       <DependentUpon>PricingForm.cs</DependentUpon>
