Creating user control for More Information button
The More Information button will print the devise repair status in any time.

--- a/Projector service app/Projector service app.csproj
+++ b/Projector service app/Projector service app.csproj
@@ -81,6 +81,12 @@
     <Compile Include="ModifyRecordForm.Designer.cs">
       <DependentUpon>ModifyRecordForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MoreInformation.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MoreInformation.Designer.cs">
+      <DependentUpon>MoreInformation.cs</DependentUpon>
+    </Compile>
     <Compile Include="NewRecordForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyRecordForm.resx">
       <DependentUpon>ModifyRecordForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MoreInformation.resx">
+      <DependentUpon>MoreInformation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewRecordForm.resx">
       <DependentUpon>NewRecordForm.cs</DependentUpon>
